melhora das páginas conhecimento e objetivos

--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -40,6 +40,7 @@
         <h1 id="escrita-fundo">Gabriel Bora</h1>
       </section>
       <section class="texto-sobre">
+        <h1 class="titulo">Conhecimentos:</h1>
         <ol class="conhecimentos">
           <li class="conhecimentos">HTML5</li>
           <li class="conhecimentos">CSS3</li>
