--- a/objetivos.html
+++ b/objetivos.html
@@ -40,7 +40,8 @@
         <h1 id="escrita-fundo">Gabriel Bora</h1>
       </section>
       <section class="texto-sobre">
-        <ul class="objetivos">
+        <h1 class="titulo">Objetivos:</h1>
+        <ul class="objetivos-p">
           <li class="objetivos-p">
             Pessoais:
             <ul class="objetivos">
