commit alterando um projeto antigo

--- a/conhecimentos.html
+++ b/conhecimentos.html
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <!-- O meu header é vertical, tentei fazer desse jeito, achei que ficava mais interessante -->
     <header>
       <nav>
         <ul class="ul-navegador">
@@ -30,24 +31,36 @@
             >
           </li>
           <li class="lista-navegador">
-            <a class="link-navegador" href="./objetivos.html">OBJETIVOS</a>
+            <a
+              class="link-navegador"
+              href="./portfolio.html"
+              target="_blank"
+              rel="noopener noreferrer"
+              >PORTFOLIO</a
+            >
           </li>
         </ul>
       </nav>
     </header>
     <main>
+      <!-- Fiz uma section para conter o background e também uma escrita deitada na vertical no canto direito da página, vi em uma rede social, achei legal e resolvi testar -->
       <section id="background">
         <h1 id="escrita-fundo">Gabriel Bora</h1>
       </section>
       <section class="texto-sobre">
         <h1 class="titulo">Conhecimentos:</h1>
+        <!-- Fiz uma tag ol, para conseguir fazer a lista com as letras do alfabeto, foi um desafio de CSS divertido -->
         <ol class="conhecimentos">
-          <li class="conhecimentos">HTML5</li>
-          <li class="conhecimentos">CSS3</li>
-          <li class="conhecimentos">Photoshop</li>
-          <li class="conhecimentos">Illustrator</li>
-          <li class="conhecimentos">Excel</li>
-          <li class="conhecimentos">Access</li>
+          <li class="conhecimentos">
+            Graduação em Administração pela UFPR - 2011/2014
+          </li>
+          <li class="conhecimentos">
+            Graduação em Análise e Desenvolvimento de Sistemas pela UNINTER -
+            2022/2025
+          </li>
+          <li class="conhecimentos">Inglês Avançado</li>
+          <li class="conhecimentos">Espanhol Intermediário</li>
+          <li class="conhecimentos">Italiano Básico</li>
         </ol>
       </section>
     </main>
